# mariakhat

./: .gitlab-ci.yml  .gitlab-ci_orig.yml  inventory  setup-postgres.yaml  setup_node_exporter.yaml  setup_prometheus.yaml  template.yml
docker/: Dockerfile  Dockerfile-lower-perm  Dockerfile-multi  compose.yaml
docker/counter_app/: pyproject.toml
roles/node-exporter/tasks/: main.yml
roles/node-exporter/templates/: node_exporter.service.j2
roles/node-exporter/vars/: main.yml
roles/postgres-exporter/defaults/: main.yml
roles/postgres-exporter/files/: postgres-exporter.service
roles/postgres-exporter/handlers/: main.yml
roles/postgres-exporter/tasks/: main.yml
roles/postgres-exporter/templates/: postgres_exporter.env.j2
roles/postgres/tasks/: main.yml
roles/postgres/templates/: pg_hba.conf.j2  postgresql.conf.j2
roles/postgres/vars/: main.yml
roles/prometheus/files/: prometheus.yml
roles/prometheus/handlers/: main.yml
roles/prometheus/tasks/: main.yml
roles/prometheus/templates/: prometheus.service.j2
roles/prometheus/vars/: main.yml
